day05_0420/ingress/05.nfs-pod-pvc.yaml
apiVersion: v1
kind: Pod 
metadata: 
  name: nfs-mount-container 
spec: 
  containers: 
  - name: nfs-mount-container 
    image: nginx 
    volumeMounts: 
    - name: nfs-volume 
      mountPath: /mnt 
  volumes: 
  - name: nfs-volume 
    persistentVolumeClaim: 
      claimName: my-nfs-pvc
