day05_0420/ingress/00.podsvc.yaml
---
# 메인페이지용 코드
apiVersion: v1
kind: Pod
metadata: 
  name: pod-main 
  labels: 
    page: main 
spec: 
  containers: 
  - name: ctn-main 
    image: nginx 
    ports: 
    - containerPort: 80
---
# 메인페이지용 서비스
apiVersion: v1 
kind: Service 
metadata: 
  name: svc-main 
spec: 
  selector: 
    page: main 
  ports: 
  - port: 80
---
# blog 용 코드
apiVersion: v1
kind: Pod
metadata: 
  name: pod-blog 
  labels: 
    page: blog
spec: 
  containers: 
  - name: ctn-blog
    image: tonyhan18/testweb:blue
    ports: 
    - containerPort: 80
---
# blog 용 서비스
apiVersion: v1 
kind: Service 
metadata: 
  name: svc-blog
spec: 
  selector: 
    page: blog
  ports:
  - port: 80 
---
# shop 용 코드
apiVersion: v1
kind: Pod
metadata: 
  name: pod-shop
  labels: 
    page: shop
spec: 
  containers: 
  - name: ctn-shop
    image: tonyhan18/testweb:green
    ports: 
    - containerPort: 80
---
# shop 용 서비스
apiVersion: v1 
kind: Service 
metadata: 
  name: svc-shop
spec: 
  selector: 
    page: shop
  ports:
  - port: 80
