day05_0420/ingress/02.deploysvc.yaml
---
# 메인페이지용 코드
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deploy-main 
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      page: main 
  template: 
    metadata: 
      name: pod-main 
      labels: 
        page: main 
    spec: 
      containers: 
      - name: ctn-main
        image: nginx 
        ports: 
        - containerPort: 80
---
# 메인페이지용 서비스
apiVersion: v1 
kind: Service 
metadata: 
  name: svc-main 
spec: 
  selector: 
    page: main 
  ports: 
  - port: 80
---
# blog 용 코드
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deploy-blog 
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      page: blog
  template: 
    metadata: 
      name: pod-blog
      labels: 
        page: blog
    spec: 
      containers: 
      - name: ctn-blog
        image: nginx 
        ports: 
        - containerPort: 80
---
# blog 용 서비스
apiVersion: v1 
kind: Service 
metadata: 
  name: svc-blog
spec: 
  selector: 
    page: blog
  ports:
  - port: 80 
---
# shop 용 코드
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: pod-shop
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      page: shop
  template: 
    metadata: 
      name: pod-shop
      labels: 
        page: shop
    spec: 
      containers: 
      - name: ctn-shop
        image: nginx 
        ports: 
        - containerPort: 80
---
# shop 용 서비스
apiVersion: v1 
kind: Service 
metadata: 
  name: svc-shop
spec: 
  selector: 
    page: shop
  ports:
  - port: 80
